--- a/cypress/Jenkinsfile
+++ b/cypress/Jenkinsfile
@@ -1,39 +1,37 @@
-
 pipeline {
-   agent any
+    agent any
 
-   tools {nodejs "Node12"}
+    tools {nodejs "node"}
 
-   environment {
-       CHROME_BIN = '/bin/google-chrome'
-      
-   }
+    environment {
+        CHROME_BIN = '/bin/google-chrome'
+    }
 
-   stages {
-       stage('Dependencies') {
-           steps {
-               sh 'npm i'
-           }
-       }
-       stage('e2e Tests') {
-         Parallel{
-             stage('Test 1') {
-                  steps {
+    stages {
+        stage('Dependencies') {
+            steps {
+                sh 'npm i'
+            }
+        }
+        stage('Build') {
+            steps {
+                sh 'npm run build'
+            }
+        }
+        stage('Unit Tests') {
+            steps {
+                sh 'npm run test'
+            }
+        }
+        stage('e2e Tests') {
+            steps {
                 sh 'npm run cypress:ci'
-                  }
-               }
-             
-             stage('Test 2') {
-                  steps {
-                sh 'npm run cypress2:ci'
-                  }
-               }
-
-       }
-       stage('Deploy') {
-           steps {
-               echo 'Deploying....'
-           }
-       }
-   }
+            }
+        }
+        stage('Deploy') {
+            steps {
+                echo 'Deploying....'
+            }
+        }
+    }
 }
