--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha",
     "cy:open": "cypress open",
-    "cy:run": "npm run cypress:ci"
+    "cy:run": "cypress run"
   },
   "keywords": [],
   "author": "",
